--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
  
     <main>
         <div class="conteudo">
-            <img src="imagens/logo.jpg" alt="logo lilika">  
+            <img src="imagens/logo4.jpg" alt="logo lilika">  
 
             <div>
-                <a href="">Novo Agendamento</a>
+                <a href="agendamento.html">Novo Agendamento</a>
                 <a href="">Minhas Reservas</a>
             </div>
         </div>
